<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_journal"
            android:title="@string/menu_journal" />
        <item
            android:id="@+id/nav_documents"
            android:title="@string/menu_documents" />
        <item
            android:id="@+id/nav_adding"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_adding" />
        <item
            android:id="@+id/nav_groups"
            android:title="@string/menu_groups" />
        <item
            android:id="@+id/nav_find"
            android:title="@string/menu_find" />
    </group>
</menu>