<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.groups">

    <LinearLayout
        android:id="@+id/container_choose_group_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_group_type" />

        <Spinner
            android:id="@+id/spinner_group_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/spinner_group_type" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_continue1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_continue" />

            <Button
                android:id="@+id/button_cancel1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_cancel" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_choose_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/text_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_group_name" />

        <Spinner
            android:id="@+id/spinner_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_continue2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_continue" />

            <Button
                android:id="@+id/button_cancel2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_cancel" />
        </LinearLayout>
    </LinearLayout>

    <TableLayout
        android:id="@+id/table_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="25" />

    <Button
        android:id="@+id/button_redactor_mod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/button_redactor" />

</LinearLayout>