<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.find" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/text_find" />

            <Spinner
                android:id="@+id/spinner_parameter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/spinner_parameter"
                android:padding="5dp" />

            <EditText
                android:id="@+id/textedit_find"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_find"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/button_find_person"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/button_find" />

            <TableLayout
                android:id="@+id/table_found"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>